[tool.poetry]
name = "quiz"
version = "0.3.0"
description = "Capable GraphQL client"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "quiz", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/quiz"
keywords = [
    "http",
    "async",
    "graphql",
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^1.0", python = "<3.8"}
gentools = "^1.2.0"
snug = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.7.0"
mypy = "^0.991"
pytest = "^7.0.1"
tox = "^3.25.1"
black = "^22.10"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"
hypothesis = "^6.31.6"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
