[tool.poetry]
name = "quiz"
version = "0.3.2"
description = "Capable GraphQL client"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "quiz", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/quiz"
keywords = [
    "http",
    "async",
    "graphql",
]

[tool.poetry.dependencies]
python = "^3.9"
gentools = "^1.2.0"
snug = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^7"
isort = "^6"
mypy = "^1.17"
pytest = "^8"
black = "^25"
pytest-cov = "^6"
pytest-mock = "^3"
hypothesis = "^6.135.29"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 79
profile = 'black'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
